google doc preview
redesign profile page goes on

--- a/client/app/modules/footer/templates/footer.tpl.html
+++ b/client/app/modules/footer/templates/footer.tpl.html
@@ -1,5 +1,5 @@
-<footer class="mtl center">
-    <ul class="list-unstyled mtl center">
+<footer class="center">
+    <ul class="list-unstyled  center">
         <li class="mrm inline"><a ui-sref="about">{{'FOOTER_ABOUT'|translate}}</a></li>
         <li class="mrm inline"><a ui-sref="contact">{{'FOOTER_CONTACT'|translate}}</a></li>
         <li class="mrm inline"><a ui-sref="term">{{'FOOTER_TERM'|translate}}</a></li>
