--- a/client/app/modules/user/templates/setting.tpl.html
+++ b/client/app/modules/user/templates/setting.tpl.html
@@ -7,12 +7,8 @@
             <li ui-route="/user/{{ profile.id }}/settings/password" ng-class="{active: $uiRoute}">
                 <a ui-sref="userSettings.pass">{{'USERSET_TPL_PASS'|translate}}</a>
             </li>
-            <li ui-route="/user/{{ profile.id }}/settings/avatar" ng-class="{active: $uiRoute}">
-                <a ui-sref="userSettings.avatar">Change avatar</a>
-            </li>
             <li ui-route="/user/{{ profile.id }}/settings/notify" ng-class="{active: $uiRoute}">
-                <a ui-sref="userSettings.notify">{{'USERSET_TPL_NOTIFY'|translate}}
-                </a>
+                <a ui-sref="userSettings.notify">{{'USERSET_TPL_NOTIFY'|translate}}</a>
             </li>
         </ul>
     </div>
