--- a/client/app/styles/less/topic.less
+++ b/client/app/styles/less/topic.less
@@ -36,19 +36,16 @@
 .file-selected{
   transform : scale(1.5);
   -webkit-transform : scale(1.5);
-
-  text-shadow: 1px 1px 1px black;
 }
 
 .icon-file{
+  cursor: pointer;
   margin-right: 10px;
   -webkit-transition: -webkit-transform 0.5s;
   -moz-transition: -moz-transform 0.5s;
   -ms-transition: -ms-transform 0.5s;
   transition: transform 0.5s;
   &:hover{
-    transform: scale(1.5);
-    -ms-transform: scale(1.5); /* IE 9 */
-    -webkit-transform: scale(1.5); /* Opera, Chrome, and Safari */
+    color : #6c7e6d;
   }
 }
