--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -20,8 +20,8 @@
                         <button class="btn btn-info btn-block" ng-if="!isFollow && isLoggedIn" tooltip="After the attention you will receive an update notification." ng-click="follow()" >{{'PROJECT_VIEW_FOLLOW'|translate}} </button>
                         <button class="btn btn-warning btn-block" ng-if="isFollow && isLoggedIn"  ng-click="unfollow(project.id)" >{{'PROJECT_VIEW_UNFOLLOW'|translate}}</button>
                         <button  ng-click="openRqteam()" ng-if="user.id != project.owner && project.ismember != 1 && isLoggedIn" class="btn btn-success btn-block">{{'PROJECT_VIEW_JOIN'|translate}}</button>
-                        <button ui-sref="projectSettings.basic({ pid : project.accessUrl })"  class="btn btn-default" ng-if="isLoggedIn">Admin</button>
-                        <button ui-sref="topic({ pid : project.accessUrl })" class="btn btn-default" ng-if="isLoggedIn">{{'BTN_TOPIC'|translate}}</button>
+                        <button ui-sref="projectSettings.basic({ pid : project.accessUrl })"  class="btn btn-default" ng-if="project.isMember == 1 || user.id == project.owner">Admin</button>
+                        <button ui-sref="topic({ pid : project.accessUrl })" class="btn btn-default" ng-if="project.isMember == 1 || user.id == project.owner">{{'BTN_TOPIC'|translate}}</button>
                     </div>
                     <div class="solid center pbm ">
                         <h3>
@@ -79,7 +79,7 @@
                     <div class="panel panel-default project-panel">
                         <div class="panel-heading" ><b>{{'PROJECT_VIEW_MEMBER'|translate}}</b></div>
                         <div class="panel-body">
-                            <div class="pas" ng-repeat="member in project.member track by $index">
+                            <div class="col-sm-6" ng-repeat="member in project.member track by $index">
                                 <div user-block="member" class="inline mlm"></div>
                             </div>
                             <div class="clearfix"></div>
@@ -90,7 +90,7 @@
                     <div class="panel panel-default project-panel">
                         <div class="panel-heading" ><b>Followers</b></div>
                         <div class="panel-body">
-                            <div class="pas" ng-repeat="follower in project.followers track by $index">
+                            <div class="col-sm-6" ng-repeat="follower in project.followers track by $index">
                                 <div user-block="follower" class="inline mlm"></div>
                             </div>
                             <div class="clearfix"></div>
