--- a/client/app/modules/topic/templates/topic-details.tpl.html
+++ b/client/app/modules/topic/templates/topic-details.tpl.html
@@ -22,7 +22,7 @@
                 <br/>
                 <section class="row">
                     <span ng-repeat="file in files">
-                        <i class="fa {{ file.class }} fa-2x icon-file" ng-class="{ 'file-selected' : file.id == fileDetails.id  }" ng-click="showFileDetails($index)" style="display : inline-block" popover-trigger="mouseenter" popover-title="{{ file.filename }}" Popover-animation="true" popover="{{ file.ownerName }}"></i>
+                        <i class="fa {{ file.class }} fa-2x icon-file" ng-class="{ 'file-selected' : file.id == fileDetails.id  }" ng-click="showFileDetails(file)" style="display : inline-block" popover-trigger="mouseenter" popover-title="{{ file.originalFilename }}" Popover-animation="true" popover="{{ file.ownerName }}"></i>
                     </span>
                 </section>
             </div>
@@ -56,7 +56,7 @@
                 <img ng-src="{{ fileDetails.url }}" width="100%" ng-if="isImage(fileDetails)"/>
                 <video ng-src="{{ fileDetails.url }}" ng-if="isVideo(fileDetails)"></video>
                 <pdf-js url="fileDetails.url" width="100%" height="400px" ng-if="isPdf(fileDetails)"></pdf-js>
-                <g-doc-preview doc-url="fileDetails.url"></g-doc-preview>
+                <g-doc-preview ng-if="isOfficeDoc(fileDetails)" doc-url="fileDetails.url"></g-doc-preview>
             </div>
         </section>
     </tab>
