challenge topic admin main page

--- a/client/app/modules/account/templates/login.tpl.html
+++ b/client/app/modules/account/templates/login.tpl.html
@@ -19,13 +19,13 @@
                     <button type="submit" class="btn btn-success" ng-click="login()">{{ 'LOGIN_BUTTON' | translate }}</button> <a ng-href="resetPassword" class="text-muted mlm"  >{{ 'LOGIN_RESETPASS' | translate }}</a>
                 </div>
             </form>
-            <div class="mtl">{{ 'LOGIN_REGISTER_INFO' | translate }}
-                <a ng-href="register" ng-hide="ref">{{ 'LOGIN_REGISTER_BTN' | translate }}</a>
-                <a ng-href="register?ref={{ref}}" ng-show="ref">{{ 'LOGIN_REGISTER_BTN' | translate }}</a>
-            </div><!--end of logout-->
+            <!--<i class="fa fa-facebook fa-2x my-btn" ng-click="logWithFb()"></i><i class="fa fa-github fa-2x my-btn" ng-click="logWithGithub()"></i>-->
 
+            <!--<div class="mtl">{{ 'LOGIN_REGISTER_INFO' | translate }}-->
+                <!--<a ng-href="register" ng-hide="ref">{{ 'LOGIN_REGISTER_BTN' | translate }}</a>-->
+                <!--<a ng-href="register?ref={{ref}}" ng-show="ref">{{ 'LOGIN_REGISTER_BTN' | translate }}</a>-->
+            <!--</div>&lt;!&ndash;end of logout&ndash;&gt;-->
         </div>
-
     </div>
 </div>
 
