--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -61,9 +61,9 @@
                 <li ui-route="/challenge/{{ challenge.accessUrl }}/details" ng-class="{active: $uiRoute}">
                     <a ui-sref="challenge.details">Details</a>
                 </li>
-                <!--<li ui-route="/challenge/{{ challenge.accessUrl }}/chat" ng-class="{active: $uiRoute}">-->
-                <!--<a ui-sref="challenge.chat">Chat</a>-->
-                <!--</li>-->
+                <li ui-route="/challenge/{{ challenge.accessUrl }}/forum" ng-class="{active: $uiRoute}">
+                <a ui-sref="challenge.topic">Forum</a>
+                </li>
                 <li ui-route="/challenge/{{ challenge.accessUrl }}/followers" ng-class="{active: $uiRoute}">
                     <a ui-sref="challenge.followers">followers</a>
                 </li>
