--- a/client/app/modules/header/templates/header.tpl.html
+++ b/client/app/modules/header/templates/header.tpl.html
@@ -67,7 +67,7 @@
                     <li class="dropdown ">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{'HEAD_ACCOUNT'|translate}} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="">Admin</a></li>
+                            <li><a ui-sref="admin">Admin</a></li>
                             <li><a ui-sref="userSettings.pass({ uid : me.profile.id })"  >{{ 'HEAD_SETTING' | translate }}</a></li>
                             <li><a ng-href=""  ng-click="logout()"> {{ 'HEAD_LOGOUT' | translate }}</a></li>
                         </ul>
